--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ extension/build/*
 extension/dist/*
 extension/node_modules/*
 
+methodology/dist/*
 methodology/config/*
 methodology/profiles/*
 methodology/experiments/*
