--- a/methodology/package.json
+++ b/methodology/package.json
@@ -2,6 +2,11 @@
   "name": "yttrex-automation",
   "version": "1.1.0",
   "description": "a tool for https://youtube.tracking.exposed for reseachers",
+  "scripts": {
+    "guardoni": "DEBUG=*,-puppeteer* node src/guardoni.js --source json/truth-on-climate.json --experiment truth-1 --profile withan",
+    "pkg": "pkg ./package.json"
+  },
+  "bin": "./src/guardoni.js",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/tracking-exposed/yttrex.git"
@@ -20,8 +25,25 @@
     "moment": "^2.29.1",
     "nconf": "^0.11.2",
     "node-fetch": "^2.6.1",
-    "puppeteer": "^2.0.0",
+    "puppeteer-core": "^9.0.0",
     "puppeteer-extra": "^2.1.3",
     "puppeteer-extra-plugin-stealth": "^2.7.6"
+  },
+  "devDependencies": {
+    "pkg": "^5.3.1"
+  },
+  "pkg": {
+    "scripts": [
+      "./src/**/*.js"
+    ],
+    "assets": [
+      "./json/**/**"
+    ],
+    "targets": [
+      "node12-linux-x64",
+      "node12-win-x64",
+      "node12-macos-x64"
+    ],
+    "outputPath": "dist"
   }
 }
