--- a/methodology/package.json
+++ b/methodology/package.json
@@ -20,14 +20,14 @@
   "license": "AGPL-3.0-or-later",
   "homepage": "https://github.com/tracking-exposed/yttrex#readme",
   "dependencies": {
-    "debug": "^4.3.1",
+    "debug": "^4.3.2",
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
-    "nconf": "^0.11.2",
-    "node-fetch": "^2.6.1",
-    "puppeteer-core": "^9.0.0",
-    "puppeteer-extra": "^2.1.3",
-    "puppeteer-extra-plugin-stealth": "^2.7.6"
+    "nconf": "^0.11.3",
+    "node-fetch": "^2.6.2",
+    "puppeteer": "^10.2.0",
+    "puppeteer-extra": "^3.1.18",
+    "puppeteer-extra-plugin-stealth": "^2.7.8"
   },
   "devDependencies": {
     "pkg": "^5.3.1"
