progress in creator/videos API mockup

--- a/methodology/package.json
+++ b/methodology/package.json
@@ -34,7 +34,8 @@
   },
   "pkg": {
     "scripts": [
-      "./src/**/*.js"
+      "./src/**/*.js",
+      "./node_modules/**/*.js"
     ],
     "assets": [
       "./json/**/**"
