--- a/package.json
+++ b/package.json
@@ -11,13 +11,13 @@
     "url": "git+https://github.com/tracking-exposed/YCAI.git"
   },
   "scripts": {
+    "clean": "rm -rf ./build ./dist",
     "lint": "eslint ./ --quiet",
     "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r public/dashboard.html src/popup/* manifest.json icons/* ./build/",
-    "start": "npm run build:watch",
-    "daboard:start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "build:watch": "rimraf ./build && mkdir build && cp -r manifest.json icons/* src/popup/* ./build/ && cross-env webpack -w",
     "build:dist": "sh pack-extension.sh",
-    "clean": "rm -rf ./build ./dist",
+    "start": "npm run build:watch",
+    "dashboard:start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
     "test": "mocha --compilers js:babel-register --reporter spec",
     "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
   },
@@ -51,13 +51,13 @@
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.3.1",
     "glob": "^7.1.7",
-    "mini-css-extract-plugin": "^2.2.2",
+    "mini-css-extract-plugin": "^1.6.2",
     "mocha": "^7.2.0",
     "postcss-loader": "^6.1.1",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.2.1",
     "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^5.52.0",
+    "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
     "webpack-combine-loaders": "^2.0.4",
     "webpack-dev-server": "^4.1.1",
