--- a/.babelrc
+++ b/.babelrc
@@ -1,28 +1,5 @@
 {
-    "presets": ["react", "es2015"],
-    "plugins": [
-        "transform-object-assign",
-        "transform-object-rest-spread",
-        "transform-react-display-name",
-        [ "transform-runtime", {
-            "polyfill": false,
-            "regenerator": false
-        } ]
-    ],
-    "sourceMaps": true
-
-    /*,
-    "env": {
-        "demo": {
-            "plugins": [
-                [ "react-transform", {
-                    "transforms": [{
-                        "imports": ["react"],
-                        "locals": ["module"]
-                    }]
-                } ]
-            ]
-        }
-    }
-    */
+  "presets": ["@babel/preset-env", "@babel/preset-react"],
+  "plugins": [],
+  "sourceMaps": true
 }
