--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 
   "short_name": "YCAI",
   "description": "Content creator should control their videos' recommendation",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": "Tracking Exposed team, check it our on https://youchoose.ai",
 
   "icons": {
@@ -41,12 +41,9 @@
         "https://*.youtube.com/*"
       ],
       "js": ["./app.js"],
-      "css": ["./youchoose-ux.css"]
+      "css": ["styles.css", "./youchoose-ux.css"]
     }
   ],
 
-  "web_accessible_resources": [
-      "*.png",
-      "youchoose-ux.css"
-  ]
+  "web_accessible_resources": ["*.png", "styles.css", "youchoose-ux.css"]
 }
