--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,20 +1,19 @@
 {
+  "parser": "babel-eslint",
   "parserOptions": {
-    "ecmaVersion": 6,
+    "ecmaVersion": 9,
     "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
       "jsx": true
     },
-    "sourceType": "module"
+    "sourceType": "module",
+    "allowImportExportEverywhere": true
   },
-
   "env": {
     "es6": true,
     "node": true,
     "mocha": true,
     "browser": true
   },
-
   "globals": {
     "chrome": true,
     "document": false,
@@ -23,7 +22,6 @@
     "browser": true,
     "_": true
   },
-
   "rules": {
     "accessor-pairs": 2,
     "arrow-spacing": [2, { "before": true, "after": true }],
