--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "prepare": "husky install",
     "clean": "rm -rf ./build ./dist",
-    "lint": "eslint ./src --quiet",
+    "lint": "eslint ./src",
     "format": "prettier -w ./src",
     "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r src/embedded/* manifest.json icons/* ./build/",
     "build:watch": "rimraf ./build && mkdir build && cp -r src/embedded/* manifest.json icons/* ./build/ && cross-env webpack -w",
@@ -30,6 +30,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@typescript-eslint/eslint-plugin": "^4.31.0",
+    "@typescript-eslint/parser": "^4.31.0",
     "autoprefixer": "^6.7.7",
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
@@ -47,8 +49,11 @@
     "dotenv": "^2.0.0",
     "eslint": "^5.16.0",
     "eslint-config-ascribe-react": "^1.4.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.24.2",
     "eslint-plugin-jsx-a11y": "^2.1.0",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.3.1",
@@ -60,6 +65,7 @@
     "prettier": "^2.4.0",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.2.1",
+    "typescript": "^4.4.2",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack": "^4.46.0",
     "webpack-cli": "^4.8.0",
