--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -14,7 +14,8 @@
       "guardoni": "guardoni",
       "answers": "answers",
       "recommendations": "recommendations",
-      "ytvids": "ytvids"
+      "ytvids": "ytvids",
+      "chiaroscuro": "chiaroscuro"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
