--- a/package.json
+++ b/package.json
@@ -14,40 +14,30 @@
     "prepare": "husky install",
     "clean": "rm -rf ./build ./dist",
     "lint": "eslint ./src",
-    "format": "prettier -w ./src",
-    "build": "rm -rf ./build && mkdir build && cross-env webpack && cp -r src/embedded/* manifest.json icons/* ./build/",
+    "format": "prettier -w ./src config-overrides.js",
     "build:watch": "rimraf ./build && mkdir build && cp -r src/embedded/* manifest.json icons/* ./build/ && cross-env webpack -w",
     "build:dist": "sh pack-extension.sh",
-    "start": "npm run build:watch",
-    "dashboard:start": "SKIP_PREFLIGHT_CHECK=true react-scripts start",
-    "test": "mocha --compilers js:babel-register --reporter spec",
-    "test:watch": "mocha -w --compilers js:babel-register --reporter spec"
+    "build": "react-app-rewired build",
+    "start": "react-app-rewired start",
+    "test": "react-app-rewired test",
+    "stats": "webpack-bundle-analyzer build/stats.json"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.4",
-    "@babel/preset-react": "^7.14.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/react": "^16.14.15",
+    "@types/react-dom": "^16.9.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "autoprefixer": "^6.7.7",
-    "babel-cli": "^6.26.0",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "8.1.0",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-object-assign": "^6.22.0",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-display-name": "^6.25.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-register": "^6.26.0",
-    "babel-runtime": "^6.26.0",
     "chai": "^3.5.0",
+    "compression-webpack-plugin": "^6.1.1",
     "cross-env": "^2.0.0",
     "css-loader": "^3.6.0",
-    "dotenv": "^2.0.0",
-    "eslint": "^5.16.0",
+    "dotenv": "^10.0.0",
+    "eslint": "^7.32.0",
     "eslint-config-ascribe-react": "^1.4.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard": "^16.0.3",
@@ -57,39 +47,43 @@
     "eslint-plugin-promise": "^2.0.1",
     "eslint-plugin-react": "^6.10.3",
     "eslint-plugin-standard": "^2.3.1",
+    "filemanager-webpack-plugin": "^6.1.7",
     "glob": "^7.1.7",
     "husky": "^7.0.2",
     "mini-css-extract-plugin": "^1.6.2",
     "mocha": "^7.2.0",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.0",
+    "react-app-rewire-multiple-entry": "^2.2.1",
+    "react-app-rewired": "^2.1.8",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.2.1",
-    "typescript": "^4.4.2",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "webpack": "^4.46.0",
+    "typescript": "^4.4.3",
+    "webpack": "4.44.2",
+    "webpack-browser-extension-plugin": "^1.1.0",
+    "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
-    "webpack-combine-loaders": "^2.0.4",
-    "webpack-dev-server": "^4.1.1",
-    "webpack-notifier": "^1.13.0",
-    "write-file-webpack-plugin": "^3.3.0"
+    "webpack-dev-server": "3.11.1",
+    "webpack-notifier": "^1.13.0"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "avenger": "^7.0.0",
     "bs58": "^3.0.0",
     "classnames": "^2.3.1",
     "create-react-class": "^15.7.0",
     "fetch-opengraph": "^1.0.30",
-    "immutability-helper": "^2.9.1",
-    "avenger": "^7.0.0",
     "fp-ts": "^2.11.1",
+    "immutability-helper": "^2.9.1",
     "io-ts": "^2.2.16",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "marked": "^0.8.2",
+    "moment": "^2.29.1",
     "react": "^16.14.0",
+    "react-app-rewire-alias": "^1.0.3",
     "react-dom": "^16.14.0",
     "react-scripts": "^4.0.3",
     "tweetnacl": "^0.14.3",
