chore: defined initial test for react components

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^27.0.1",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
@@ -51,11 +52,12 @@
     "glob": "^7.1.7",
     "husky": "^7.0.2",
     "mini-css-extract-plugin": "^1.6.2",
-    "mocha": "^7.2.0",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.0",
     "react-app-rewire-multiple-entry": "^2.2.1",
     "react-app-rewired": "^2.1.8",
+    "react-app-rewire-alias": "^1.0.3",
+    "react-test-renderer": "^17.0.2",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.2.1",
     "typescript": "^4.4.3",
@@ -83,7 +85,6 @@
     "marked": "^0.8.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
-    "react-app-rewire-alias": "^1.0.3",
     "react-dom": "^16.14.0",
     "react-scripts": "^4.0.3",
     "tweetnacl": "^0.14.3",
