chore: use default index.html instead dashboard.html

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
+    "@types/react-test-renderer": "^17.0.1",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "autoprefixer": "^6.7.7",
@@ -52,9 +53,9 @@
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.0",
+    "react-app-rewire-alias": "^1.0.3",
     "react-app-rewire-multiple-entry": "^2.2.1",
     "react-app-rewired": "^2.1.8",
-    "react-app-rewire-alias": "^1.0.3",
     "react-test-renderer": "^17.0.2",
     "react-transform-hmr": "^1.0.4",
     "style-loader": "^3.2.1",
