--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "rm -rf ./build ./dist",
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
+    "tsc": "tsc",
     "build": "react-app-rewired build",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
@@ -28,7 +29,7 @@
     "@types/jest": "^27.0.1",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
-    "@types/react-test-renderer": "^17.0.1",
+    "@types/react-test-renderer": "^16.0.0",
     "@typescript-eslint/eslint-plugin": "^4.31.0",
     "@typescript-eslint/parser": "^4.31.0",
     "autoprefixer": "^6.7.7",
@@ -56,9 +57,8 @@
     "react-app-rewire-alias": "^1.0.3",
     "react-app-rewire-multiple-entry": "^2.2.1",
     "react-app-rewired": "^2.1.8",
-    "react-test-renderer": "^17.0.2",
+    "react-test-renderer": "^16.0.0",
     "react-transform-hmr": "^1.0.4",
-    "style-loader": "^3.2.1",
     "typescript": "^4.4.3",
     "webpack": "4.44.2",
     "webpack-browser-extension-plugin": "^1.1.0",
@@ -77,7 +77,6 @@
     "create-react-class": "^15.7.0",
     "fetch-opengraph": "^1.0.30",
     "fp-ts": "^2.11.1",
-    "immutability-helper": "^2.9.1",
     "io-ts": "^2.2.16",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
