--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,18 +8,16 @@
     "allowJs": true,
     "strict": true,
     "esModuleInterop": true,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "resolveJsonModule": true,
     "forceConsistentCasingInFileNames": true,
     "lib": [
       "dom",
       "esnext"
     ],
-    "skipLibCheck": true,
-    "skipDefaultLibCheck": true,
     "typeRoots": [
-      "typings",
-      "node_modules/@types"
+      "node_modules/@types",
+      "typings"
     ],
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
@@ -32,6 +30,7 @@
   ],
   "exclude": [
     "node_modules",
-    "public"
+    "public",
+    "**/__tests__/**"
   ]
 }
