--- a/.env.production
+++ b/.env.production
@@ -1,5 +1,8 @@
+# bundle env
+BUNDLE_STATS=false
+BUNDLE_ENABLE_NOTIFY=false
+
+# app env
 REACT_APP_API_URL=https://youchoose.tracking.exposed
-REACT_APP_NODE_ENV=production
 REACT_APP_API_ROOT=https://youchoose.tracking.exposed/api/v1
 REACT_APP_WEB_ROOT=https://youchoose.tracking.exposed
-REACT_APP_BUNDLE_STATS=false
