--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,7 @@
 {
   "extends": [
     "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:react/recommended",
     "prettier"
   ],
   "parser": "@typescript-eslint/parser",
@@ -13,7 +14,8 @@
     "project": ["./tsconfig.paths.json"]
   },
   "plugins": [
-    "@typescript-eslint"
+    "@typescript-eslint",
+    "react"
   ],
   "env": {
     "es6": true,
@@ -35,6 +37,7 @@
     }
   },
   "rules": {
-    "no-console": 1
+    "no-console": 1,
+    "react/prop-types": 0
   }
 }
