--- a/.eslintrc
+++ b/.eslintrc
@@ -40,6 +40,9 @@
     "no-console": 1,
     "react/prop-types": 0,
     "no-use-before-define": "off",
-    "@typescript-eslint/no-use-before-define": ["error"]
+    "@typescript-eslint/no-use-before-define": ["error"],
+    "@typescript-eslint/return-await": ["off"],
+    "@typescript-eslint/promise-function-async": ["off"],
+    "@typescript-eslint/no-redeclare": ["off"]
   }
 }
