--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "@types/bs58": "^4.0.1",
+    "@types/chrome": "0.0.157",
     "@types/jest": "^27.0.1",
+    "@types/lodash": "^4.14.173",
     "@types/react": "^16.14.15",
     "@types/react-dom": "^16.9.14",
     "@types/react-test-renderer": "^16.0.0",
