refactor: popup layout and config decoding

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
-    "build": "react-app-rewired build",
+    "build": "DISABLE_ESLINT_PLUGIN=true react-app-rewired build",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
     "stats": "webpack-bundle-analyzer build/stats.json"
@@ -48,6 +48,7 @@
     "filemanager-webpack-plugin": "^6.1.7",
     "glob": "^7.1.7",
     "husky": "^7.0.2",
+    "jest-chrome": "^0.7.2",
     "mini-css-extract-plugin": "^1.6.2",
     "postcss-loader": "^6.1.1",
     "prettier": "^2.4.0",
@@ -72,6 +73,7 @@
     "bs58": "^3.0.0",
     "classnames": "^2.3.1",
     "create-react-class": "^15.7.0",
+    "date-fns": "^2.24.0",
     "fetch-opengraph": "^1.0.30",
     "fp-ts": "^2.11.1",
     "io-ts": "^2.2.16",
