--- a/.env
+++ b/.env
@@ -1,11 +1,10 @@
 # bundle env
 
+NODE_ENV=development
 BUNDLE_STATS=false
 BUNDLE_ENABLE_NOTIFY=false
 
 # app env
 
 REACT_APP_API_URL=http://localhost:8000/v1
-REACT_APP_API_ROOT=http://localhost:9000/api/v1
-REACT_APP_WEB_ROOT=http://localhost:3000
-REACT_APP_BUNDLE_STATS=false
+REACT_APP_WEB_URL=http://localhost:3000
