--- a/.env.production
+++ b/.env.production
@@ -3,6 +3,5 @@ BUNDLE_STATS=false
 BUNDLE_ENABLE_NOTIFY=false
 
 # app env
-REACT_APP_API_URL=https://youchoose.tracking.exposed
-REACT_APP_API_ROOT=https://youchoose.tracking.exposed/api/v1
-REACT_APP_WEB_ROOT=https://youchoose.tracking.exposed
+REACT_APP_API_URL=https://youchoose.tracking.exposed/api/v1
+REACT_APP_WEB_URL=https://youchoose.tracking.exposed
