--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ BUNDLE_ENABLE_NOTIFY=false
 
 REACT_APP_API_URL=http://localhost:8000/v1
 REACT_APP_WEB_URL=http://localhost:3000
+
+REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
