feat: api service for docker-compose

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 .env
 .vscode/*
 
+node_modules
+
 extension/build/*
 extension/dist/*
 extension/node_modules/*
@@ -22,7 +24,7 @@ methodology/experiments/*
 methodology/node_modules/*
 methodology/extension/*
 
-backend/node_modules/*
+backend/dump
 backend/experiments/*
 backend/config/secrets.json
 
