--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -11,3 +11,22 @@ services:
       - "27017:27017"
     volumes:
       - ./dump:/dump/
+
+  api:
+    image: node:12-slim
+    ports:
+      - "9000:9000"
+    environment:
+      DEBUG: "*,-body-parser*,-express*,-follow-redirects"
+      key: my-dev-key
+    links:
+      - mongo
+    volumes:
+      - ./bin:/app/bin
+      - ./config:/app/config
+      - ./lib:/app/lib
+      - ./parsers:/app/parsers
+      - ./routes:/app/routes
+      - ./node_modules:/app/node_modules
+    working_dir: /app
+    command: ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server
