--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -15,7 +15,7 @@
       "answers": "answers",
       "recommendations": "recommendations",
       "ytvids": "ytvids",
-      "chiaroscuro": "chiaroscuro"
+      "directives": "directives"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
