chore: fixing for windows and chrome needs

--- a/.env
+++ b/.env
@@ -10,3 +10,5 @@ REACT_APP_API_URL=https://youchoose.tracking.exposed/api
 REACT_APP_WEB_URL=http://localhost:3000
 
 REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
+
+DISABLE_ESLINT_PLUGIN=true
