--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint ./src",
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
-    "build": "DISABLE_ESLINT_PLUGIN=true react-app-rewired build",
+    "build": "react-app-rewired build",
     "watch": "node ./scripts/watch",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
