--- a/.env.production
+++ b/.env.production
@@ -3,5 +3,6 @@ BUNDLE_STATS=false
 BUNDLE_ENABLE_NOTIFY=false
 
 # app env
-REACT_APP_API_URL=https://youchoose.tracking.exposed/api/v1
+REACT_APP_API_URL=https://youchoose.tracking.exposed/api
 REACT_APP_WEB_URL=https://youchoose.tracking.exposed
+REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
