feat: added i18n with initial translation key

--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "date-fns": "^2.24.0",
     "fetch-opengraph": "^1.0.30",
     "fp-ts": "^2.11.1",
+    "i18next": "^21.1.1",
     "io-ts": "^2.2.16",
     "io-ts-types": "^0.5.16",
     "jquery": "^3.6.0",
@@ -86,6 +87,7 @@
     "moment": "^2.29.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-i18next": "^11.12.0",
     "react-scripts": "^4.0.3",
     "tweetnacl": "^0.14.3",
     "tweetnacl-util": "^0.13.3",
