--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,8 @@
       "esnext"
     ],
     "typeRoots": [
+      "node_modules/@types",
       "typings",
-      "node_modules/@types"
     ],
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
