--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
     ],
     "typeRoots": [
       "node_modules/@types",
-      "typings",
+      "typings"
     ],
     "baseUrl": "./src",
     "allowSyntheticDefaultImports": true,
