chore: defined command to build extension for local usage

--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ BUNDLE_ENABLE_NOTIFY=false
 
 # app env
 
-REACT_APP_API_URL=https://youchoose.tracking.exposed/api
+REACT_APP_API_URL=http://localhost:9000/api
 REACT_APP_WEB_URL=http://localhost:3000
 
 REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
