--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier -w ./src config-overrides.js",
     "tsc": "tsc",
     "build": "react-app-rewired build",
+    "build:development": "env-cmd -f .env react-app-rewired build",
     "watch": "node ./scripts/watch",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
@@ -41,6 +42,7 @@
     "autoprefixer": "^6.7.7",
     "chai": "^3.5.0",
     "dotenv": "^10.0.0",
+    "env-cmd": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-config-standard-with-typescript": "^21.0.1",
