--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,9 @@
   "version": "1.5.0",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa DEBUG=*,-body-parser*,-express*,-follow-redirects ./node_modules/nodemon/bin/nodemon.js --config config/nodemon.json bin/server",
+    "watch": "key=fuffa DEBUG=*,-body-parser*,-express*,-follow-redirects nodemon --config config/nodemon.json bin/server",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server",
+    "start:ts": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo ts-node bin/server",
     "parserv": "DEBUG=*,-parser:home:warning node bin/parserv2.js",
     "searches": "DEBUG=* node bin/searches.js",
     "t:lib": "mocha tests/lib/*",
@@ -24,6 +25,7 @@
     "express": "^4.14.0",
     "fetch-opengraph": "^1.0.30",
     "food-words": "^1.1.0",
+    "io-ts": "^2.2.16",
     "jsdom": "^13.0.0",
     "moment": "^2.29.1",
     "mongodb3": "npm:mongodb@3.2.3",
@@ -35,5 +37,9 @@
     "numeral": "^2.0.6",
     "request": "^2.88.2",
     "tweetnacl": "^0.14.3"
+  },
+  "devDependencies": {
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
