--- a/package.json
+++ b/package.json
@@ -88,6 +88,8 @@
     "marked": "^0.8.2",
     "moment": "^2.29.1",
     "react": "^16.14.0",
+    "react-dnd": "^14.0.4",
+    "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.12.0",
     "react-scripts": "^4.0.3",
