--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,7 +1,33 @@
 version: "3"
 
+
+# to restore a dump from folder
+# docker-compose exec -T mongo mongorestore /dump
 services:
   mongo:
     image: mongo:latest
+    restart: always
     ports:
       - "27017:27017"
+    volumes:
+      - ./dump:/dump/
+
+  api:
+    image: node:12-slim
+    ports:
+      - "9000:9000"
+    environment:
+      DEBUG: "*,-body-parser*,-express*,-follow-redirects"
+      key: my-dev-key
+    links:
+      - mongo
+    volumes:
+      - ./bin:/app/bin
+      - ./config:/app/config
+      - ./lib:/app/lib
+      - ./parsers:/app/parsers
+      - ./routes:/app/routes
+      - ./node_modules:/app/node_modules
+      - ./package.json:/app/package.json
+    working_dir: /app
+    command: npm run watch
