--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
     "avenger": "^7.0.0",
+    "axios": "^0.22.0",
     "bs58": "^3.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
@@ -93,6 +94,7 @@
     "react-dom": "^16.14.0",
     "react-i18next": "^11.12.0",
     "react-scripts": "^4.0.3",
+    "ts-endpoint": "^2.0.0",
     "tweetnacl": "^0.14.3",
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3",
