--- a/tsconfig.paths.json
+++ b/tsconfig.paths.json
@@ -19,7 +19,7 @@
     "isolatedModules": true,
     "paths": {
       "@chrome/*": ["./chrome/*"],
-      "@models/*": ["../yttrex-backend/backend/models/*"]
+      "@backend/*": ["../yttrex-backend/backend/*"]
     }
   },
   "include": ["./src"],
