--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,8 @@
   },
   "devDependencies": {
     "ts-node": "^10.2.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2"
   }
 }
