--- a/backend/package.json
+++ b/backend/package.json
@@ -40,6 +40,8 @@
     "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
