--- a/backend/package.json
+++ b/backend/package.json
@@ -36,9 +36,12 @@
     "nodemon": "^2.0.12",
     "numeral": "^2.0.6",
     "request": "^2.88.2",
+    "ts-endpoint": "^2.0.0",
     "tweetnacl": "^0.14.3"
   },
   "devDependencies": {
+    "chai": "^4.3.4",
+    "mocha": "^9.1.2",
     "ts-node": "^10.2.1",
     "typescript": "^4.4.3"
   }
