feat: implemented verification flow for content creators

--- a/.env.production
+++ b/.env.production
@@ -6,3 +6,4 @@ BUNDLE_ENABLE_NOTIFY=false
 REACT_APP_API_URL=https://youchoose.tracking.exposed/api
 REACT_APP_WEB_URL=https://youchoose.tracking.exposed
 REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
+REACT_APP_LOGGER=@ycai:*:error
