--- a/.env
+++ b/.env
@@ -10,5 +10,6 @@ REACT_APP_API_URL=http://localhost:9000/api
 REACT_APP_WEB_URL=http://localhost:3000
 
 REACT_APP_BUILD_DATE="2021-09-20T00:00:00.000Z"
+REACT_APP_LOGGER=@ycai:*
 
 DISABLE_ESLINT_PLUGIN=true
