--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@testing-library/user-event": "^12.8.3",
     "@types/bs58": "^4.0.1",
     "@types/chrome": "0.0.157",
+    "@types/debug": "^4.1.7",
     "@types/jest": "^27.0.1",
     "@types/lodash": "^4.14.173",
     "@types/react": "^16.14.15",
@@ -79,6 +80,7 @@
     "bs58": "^3.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
+    "debug": "^4.3.2",
     "fetch-opengraph": "^1.0.30",
     "fp-ts": "^2.11.1",
     "i18next": "^21.1.1",
