--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "fetch-opengraph": "^1.0.30",
     "food-words": "^1.1.0",
     "io-ts": "^2.2.16",
+    "io-ts-types": "^0.5.16",
     "jsdom": "^13.0.0",
     "moment": "^2.29.1",
     "mongodb3": "npm:mongodb@3.2.3",
