--- a/package.json
+++ b/package.json
@@ -77,7 +77,6 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "avenger": "^7.0.0",
     "axios": "^0.22.0",
-    "bs58": "^3.0.0",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "debug": "^4.3.2",
@@ -97,10 +96,10 @@
     "react-i18next": "^11.12.0",
     "react-scripts": "^4.0.3",
     "ts-endpoint": "^2.0.0",
-    "tweetnacl": "^0.14.3",
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "zenroom": "^2.2.1"
   },
   "browserslist": {
     "production": [
