feat: progress in implementing #92

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -16,7 +16,8 @@
       "experiments": "experiments",
       "directives": "directives",
       "emails": "emails",
-      "tokens": "tokens"
+      "tokens": "tokens",
+      "creators": "creators"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
