--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "@material-ui/lab": "^4.0.0-alpha.60",
     "avenger": "^7.0.0",
     "axios": "^0.22.0",
+    "bs58": "^4.0.1",
     "classnames": "^2.3.1",
     "date-fns": "^2.24.0",
     "debug": "^4.3.2",
@@ -89,13 +90,16 @@
     "lodash": "^4.17.21",
     "marked": "^0.8.2",
     "moment": "^2.29.1",
+    "nacl": "^0.1.3",
     "react": "^16.14.0",
     "react-dnd": "^14.0.4",
     "react-dnd-html5-backend": "^14.0.2",
     "react-dom": "^16.14.0",
     "react-i18next": "^11.12.0",
     "react-scripts": "^4.0.3",
+    "remote-import": "0.0.11",
     "ts-endpoint": "^2.0.0",
+    "tweetnacl": "^1.0.3",
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3",
     "web-vitals": "^2.1.0",
