--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "webpack-bundle-analyzer": "^4.4.2",
     "webpack-cli": "^4.8.0",
     "webpack-dev-server": "3.11.1",
-    "webpack-notifier": "^1.13.0"
+    "webpack-notifier": "^1.13.0",
+    "zenroom": "^2.2.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.12.3",
@@ -103,7 +104,7 @@
     "tweetnacl-util": "^0.13.3",
     "uuid": "^2.0.3",
     "web-vitals": "^2.1.0",
-    "zenroom": "^2.2.1"
+    "webpack-external-import": "^1.1.3"
   },
   "browserslist": {
     "production": [
