--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -17,7 +17,8 @@
       "directives": "directives",
       "emails": "emails",
       "tokens": "tokens",
-      "creators": "creators"
+      "creators": "creators",
+      "ads": "ads"
   },
   "mongoHost": "localhost",
   "mongoPort": 27017,
