feat: improvements for version 1.7 (MutationObserver)

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -14,5 +14,11 @@
     "./routes",
     "./utils"
   ],
-  "exclude": ["./tests"]
+  "exclude": ["./tests"],
+  "watchOptions": {
+"watchFile": "useFsEvents",
+"watchDirectory": "useFsEvents",
+"synchronousWatchDirectory": true
+  }
 }
+
