--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,8 @@
   "version": "1.7.2",
   "description": "youtube.tracking.exposed - backend data collector",
   "scripts": {
-    "watch": "key=fuffa DEBUG=*,-body-parser*,-express*,-follow-redirects nodemon --config config/nodemon.json bin/server",
-    "watch:ts": "key=fuffa DEBUG=*,-body-parser*,-express*,-follow-redirects nodemon --config config/nodemon.json --exec 'ts-node bin/server'",
-    "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo node bin/server",
-    "start:ts": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo ts-node bin/server",
+    "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/server.js",
+    "start": "DEBUG=*,-body-parser:*,-express:*,-lib:mongo ts-node bin/server",
     "parserv": "DEBUG=*,-parser:home:warning node bin/parserv2.js",
     "searches": "DEBUG=* node bin/searches.js",
     "test": "mocha --require ts-node/register tests/basic/*",
@@ -35,7 +33,6 @@
     "nconf": "^0.8.4",
     "node-fetch": "^2.6.1",
     "node-libcurl": "^2.3.3",
-    "nodemon": "^2.0.12",
     "numeral": "^2.0.6",
     "request": "^2.88.2",
     "ts-endpoint": "^2.0.0",
@@ -46,6 +43,7 @@
     "chai": "^4.3.4",
     "mocha": "^9.1.2",
     "ts-node": "^10.2.1",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.4.3"
   }
 }
