--- a/extension/package.json
+++ b/extension/package.json
@@ -67,6 +67,7 @@
     "cheerio": "^0.22.0",
     "classnames": "^2.3.1",
     "create-react-class": "^15.7.0",
+    "html2canvas": "^1.3.2",
     "immutability-helper": "^2.9.1",
     "jquery": "^3.6.0",
     "lodash": "^4.17.21",
