refactor: removed Bluebird, removed nodemon, renamed new parser to leafserv

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -5,10 +5,9 @@
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups",
-      "labels": "labels",
+      "leafs": "leafs",
       "queries": "queries",
       "campaigns": "campaigns",
-      "searches": "searches",
       "errors": "errors",
       "answers": "answers",
       "recommendations": "recommendations",
