--- a/public/manifest.json
+++ b/public/manifest.json
@@ -26,6 +26,13 @@
     "https://youchoose.tracking.exposed/"
   ],
 
+  "cross_origin_embedder_policy": {
+    "value": "require-corp"
+  },
+  "cross_origin_opener_policy": {
+    "value": "same-origin"
+  },
+
   "background": {
     "scripts": ["./background.js"],
     "persistent": true
