--- a/public/manifest.json
+++ b/public/manifest.json
@@ -38,6 +38,13 @@
     "persistent": true
   },
 
+  "cross_origin_embedder_policy": {
+    "value": "require-corp"
+  },
+  "cross_origin_opener_policy": {
+    "value": "same-origin"
+  },
+
   "content_scripts": [
     {
       "matches": [
