fix: ensure one creator object per channel, fix typo

--- a/backend/config/settings.json
+++ b/backend/config/settings.json
@@ -5,7 +5,7 @@
       "metadata": "metadata",
       "stats": "trexstats",
       "groups": "groups",
-      "leafs": "leafs",
+      "leaves": "leaves",
       "queries": "queries",
       "campaigns": "campaigns",
       "errors": "errors",
