--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "watch": "key=fuffa DEBUG=*,-express:*,-body-parser:*,-follow-redirects node_modules/.bin/ts-node-dev --respawn --transpile-only bin/server.js",
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:*,-follow-redirects ts-node bin/server",
-    "parserv": "DEBUG=*,-parser:home:warning node_modules/.bin/ts-node node bin/parserv2.js",
+    "parserv": "DEBUG=*,-parser:home:warning node_modules/.bin/ts-node bin/parserv2.js",
     "parserv:watch": "DEBUG=*,-parser:home:warning node_modules/.bin/ts-node-dev --respawn --transpile-only bin/parserv2.js",
     "leafserv": "DEBUG=* node bin/leafserv.js",
     "leafserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leafserv.js",
