--- a/backend/package.json
+++ b/backend/package.json
@@ -7,8 +7,8 @@
     "start": "DEBUG=*,-body-parser:*,-express:*,-lib:*,-follow-redirects ts-node bin/server",
     "parserv": "DEBUG=*,-parser:home:warning node_modules/.bin/ts-node bin/parserv2.js",
     "parserv:watch": "DEBUG=*,-parser:home:warning node_modules/.bin/ts-node-dev --respawn --transpile-only bin/parserv2.js",
-    "leafserv": "DEBUG=* node bin/leafserv.js",
-    "leafserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leafserv.js",
+    "leaveserv": "DEBUG=* node bin/leaveserv.js",
+    "leaveserv:watch": "DEBUG=* node_modules/.bin/ts-node-dev --respawn --transpile-only bin/leaveserv.js",
     "test": "mocha --require ts-node/register tests/basic/*",
     "campaigns": "node bin/campaignUpdater.js --dest https://youtube.tracking.exposed"
   },
