chore: release ci worflow

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youchoose.ai",
-  "version": "0.3.0",
+  "version": "1.0.0-beta.1",
   "description": "YouChoose AI",
   "homepage": "https://youchoose.ai",
   "bugs": "https://github.com/tracking-exposed/YCAI/issues",
@@ -21,12 +21,15 @@
     "watch": "node ./scripts/watch",
     "start": "react-app-rewired start",
     "test": "react-app-rewired test",
-    "stats": "webpack-bundle-analyzer build/stats.json"
+    "stats": "webpack-bundle-analyzer build/stats.json",
+    "prepack": "npm run build",
+    "semantic-release": "semantic-release"
   },
   "devDependencies": {
     "@babel/core": "^7.15.5",
     "@commitlint/cli": "^13.1.0",
     "@commitlint/config-conventional": "^13.1.0",
+    "@semantic-release/exec": "^6.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
@@ -63,6 +66,7 @@
     "react-app-rewired": "^2.1.8",
     "react-test-renderer": "^16.0.0",
     "react-transform-hmr": "^1.0.4",
+    "semantic-release": "^18.0.0",
     "typescript": "^4.4.3",
     "webpack": "4.44.2",
     "webpack-browser-extension-plugin": "^1.1.0",
